Готова робота зі стилями

--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -6,13 +6,20 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Osetrov</title>
+                                 <!--Глобальний стиль стилізації-->
+    <style>
+        ul
+        {
+        color: goldenrod ;
+    }
+    </style>
+                                <!--Під'єднувальний стиль стилізації-->
+<link rel="stylesheet" href="main.css">
 </head>
 <body>
-<!--За наступною scratch-структурою створити розмітку про троьх чледнів родини сімпсонів. Данні брати з
-https://simpsons.fandom.com/wiki/Category:Simpson_family
-Стилізація через окремий css файл. кожен елемент окрім картинок повинен мати background та color. Всі картинки повінні мати ширину від 200 до 400 пікселів.
--->
-<h1>Simpson family</h1>
+                                <!--Вбудований стиль стилізації-->
+<h1 style="background-color: lightcoral" >Simpson family</h1>
+<hr>
 <img src="https://static.wikia.nocookie.net/simpsons/images/6/63/The_Simpsons_Simpsons_FamilyPicture.png" alt="Taken from the Internet">
 <p>The Simpsons are the main protagonists of the TV show The Simpsons. The family first appeared on The Tracey Ullman Show, in the comedy short Good Night. The family has hundreds of relatives, including Mr. Burns and Patty and Selma.</p>
 <h2><a href="https://simpsons.fandom.com/wiki/Homer_Simpson">Homer Simpson</a></h2>
