--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -10,7 +10,7 @@
     <style>
         ul
         {
-        color: goldenrod ;
+        color: goldenrod;
     }
     </style>
                                 <!--Під'єднувальний стиль стилізації-->
@@ -19,9 +19,9 @@
 <body>
                                 <!--Вбудований стиль стилізації-->
 <h1 style="background-color: lightcoral" >Simpson family</h1>
-<hr>
 <img src="https://static.wikia.nocookie.net/simpsons/images/6/63/The_Simpsons_Simpsons_FamilyPicture.png" alt="Taken from the Internet">
 <p>The Simpsons are the main protagonists of the TV show The Simpsons. The family first appeared on The Tracey Ullman Show, in the comedy short Good Night. The family has hundreds of relatives, including Mr. Burns and Patty and Selma.</p>
+<hr>
 <h2><a href="https://simpsons.fandom.com/wiki/Homer_Simpson">Homer Simpson</a></h2>
 <img src="image/Homer.png" alt="Homer Simpson">
 <p>Homer Jay Simpson (born May 12, 1956)[40] is a man from Springfield. He is the spouse of Marge Simpson and father of Bart, Lisa and Maggie Simpson. Homer is overweight (said to be 239 pounds)[41], lazy, and often ignorant to the world around him. Although he has many flaws, he has shown to have great caring, love, and even bravery to those he cares about and, sometimes, even others he doesn't.</p>
@@ -32,7 +32,7 @@
 </ul>
 <h2 ><a href="https://simpsons.fandom.com/wiki/Bart_Simpson">Bart Simpson</a></h2>
 <img src="image/Bart.webp" alt="Bart Simpson">
-<p>Bartholomew JoJo "Bart" Simpson (born Feburary 23 or April 1, 1980)[7]is the mischievous, rebellious, misunderstood, disruptive and "potentially dangerous" oldest child of the Simpson family in The Simpsons. He is the only son of Homer and Marge Simpson, and the older brother of Lisa and Maggie. He also has been nicknamed "Cosmo", after discovering a comet in "Bart's Comet". </p>
+<p>Bartholomew JoJo "Bart" Simpson (born February 23 or April 1, 1980)[7]is the mischievous, rebellious, misunderstood, disruptive and "potentially dangerous" oldest child of the Simpson family in The Simpsons. He is the only son of Homer and Marge Simpson, and the older brother of Lisa and Maggie. He also has been nicknamed "Cosmo", after discovering a comet in "Bart's Comet". </p>
 <ul>
     <li>“Ay Caramba!”</li>
     <li>“Don't have a cow, man.”</li>
@@ -47,4 +47,4 @@
     <li>“BAAAAART!!”</li>
 </ul>
 </body>
-</html>
+</html> 
